force-app/main/default/objects/Offsite_Template_Coverage_Contact__c/Offsite_Template_Coverage_Contact__c.object-meta.xml
<CustomObject>
    <description>Offsite Template Coverage Contacts</description>
    <label>Offsite Template Coverage Contact</label>
    <nameField>
        <displayFormat>OTCC-{00000000}</displayFormat>
        <label>Offsite Template Coverage Contact  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Offsite Template Coverage Contacts</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>