force-app/main/default/objects/Offsite_Template_Coverage_Contact__c/fields/Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Name__c</fullName>
    <description>Name of the Contact as Point in Time</description>
    <label>Contact Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>