force-app/main/default/objects/Offsite_Template_Coverage_Contact__c/fields/Coverage_Contact__c.field-meta.xml
<CustomField>
    <fullName>Coverage_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related Coverage Contact</description>
    <label>Coverage Contact</label>
    <referenceTo>Coverage_Contact__c</referenceTo>
    <relationshipLabel>Offsite Template Coverage Contacts</relationshipLabel>
    <relationshipName>Offsite_Template_Coverage_Contact_del</relationshipName>
    <type>Lookup</type>
</CustomField>