force-app/main/default/objects/Offsite_Template_Coverage_Contact__c/fields/Focus__c.field-meta.xml
<CustomField>
    <fullName>Focus__c</fullName>
    <label>Focus</label>
    <length>255</length>
    <type>Text</type>
</CustomField>