force-app/main/default/objects/Offsite_Template_Coverage_Contact__c/fields/Offsite_Template__c.field-meta.xml
<CustomField>
    <fullName>Offsite_Template__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Related Offsite Template Record</description>
    <label>Offsite Template</label>
    <referenceTo>Offsite_Template__c</referenceTo>
    <relationshipLabel>Offsite Template Coverage Contacts</relationshipLabel>
    <relationshipName>Offsite_Template_Coverage_Contacts</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>